--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -2,8 +2,23 @@ $title-color-dark: #ccc;
 
 
 @use 'bulma/sass' with (
-	$family-primary: '"Roboto Variable", sans-serif'
+	$family-primary: '"Roboto Flex Variable", sans-serif'
 );
+
+@font-face {
+	font-family: 'Roboto Flex Variable';
+	font-style: normal;
+	font-display: swap;
+	font-weight: 100 1000;
+	font-stretch: 25% 151%;
+	src: url(@fontsource-variable/roboto-flex/files/roboto-flex-latin-wdth-normal.woff2)
+		format('woff2-variations');
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+		U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+		U+FFFD;
+}
+
 
 // @forward "bulma/sass/base";
 // @forward "bulma/sass/helpers";
